--- a/scss/content/_foot.scss
+++ b/scss/content/_foot.scss
@@ -1,4 +1,9 @@
 footer{
   background-color: $dark;
-  .astudillo{margin: 0 auto;}
+  .astudillo{
+    margin: 3em auto;
+    @media(min-width: $medium){
+      width: 50%;
+    }
+  }
 }
